unpackaged/main/default/objects/EventApi__Event_Page_Component__c/EventApi__Event_Page_Component__c.object-meta.xml
<CustomObject>
    <description>Components that make up the look and feel of each event page.</description>
    <label>Event Page Component</label>
    <nameField>
        <displayFormat>EPC-{0000000}</displayFormat>
        <label>Event Page Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Page Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>