unpackaged/main/default/objects/EventApi__Event_Page_Component__c/fields/EventApi__Component_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Component_Name__c</fullName>
    <description>** REQUIRED ** API name of a Lightning component.</description>
    <inlineHelpText>** REQUIRED ** API name of a Lightning component.</inlineHelpText>
    <label>Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>