unpackaged/main/default/objects/EventApi__Event_Page_Component__c/fields/EventApi__Config__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Config__c</fullName>
    <description>** SYSTEM ** (LABEL = SYSTEM, API NAME = EventApi__Config__c)</description>
    <inlineHelpText>** SYSTEM ** (LABEL = SYSTEM, API NAME = EventApi__Config__c)</inlineHelpText>
    <label>System</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>