unpackaged/main/default/objects/EventApi__Event_Page_Component__c/fields/EventApi__Title__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Title__c</fullName>
    <description>The name of the related lightning component.</description>
    <inlineHelpText>The name of the related lightning component.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>